# pbdm-app

./: .gitignore  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  env.example  pyodk_config.toml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  release.yml
flask-app/: app.py
flask-app/dash_app/: dashboard.py
flask-app/files/: pbdm_data.json
flask-app/scripts/: odk_to_pbdm.py  translate_odk.py
flask-app/templates/: dashboard.html  home.html  interact.html  odk.html
src/pbdm_app/: app.py
src/pbdm_app/dash_app/: dashboard.py
src/pbdm_app/scripts/: pbdm_to_psymple.py
src/pbdm_app/static/css/: style.css
src/pbdm_app/templates/: base.html  home.html  interact.html  loading.html  upload.html
