[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools-scm>=8"]

[project]
authors = [
    {email = "contact@idems.international", name = "IDEMS International"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "Flask",
    "dash",
    "pandas",
    "pbdm",
    "plotly",
    "pygraphviz",
    "pyodk",
    "requests",
    "scipy",
    "setuptools",
]
description = "Web application for PBDM framework"
dynamic = ["version"]
keywords = []
license = {text = "GPL-3.0-or-later"}
name = "pbdm_app"
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
    "python-dotenv",
]

[project.urls]
Homepage = "https://github.com/casasglobal-org/pbdm-app"
Repository = "https://github.com/casasglobal-org/pbdm-app"
